--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -65,19 +65,6 @@
         android:id="@+id/Backbtn"
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="247dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="46dp"
-        android:backgroundTint="@color/purple_200"
-        android:text="Next" />
-
-    <Button
-        android:id="@+id/Nextbtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
@@ -87,6 +74,32 @@
         android:layout_marginBottom="41dp"
         android:backgroundTint="@color/black"
         android:text="Back" />
+
+    <Button
+        android:id="@+id/Nextbtn"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="247dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="46dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="Next"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/current_user_text_view"
+        android:layout_width="133dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="TextView"
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
