--- a/app/src/main/res/layout/fragment_bed_time.xml
+++ b/app/src/main/res/layout/fragment_bed_time.xml
@@ -9,46 +9,16 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <com.nitish.typewriterview.TypeWriterView
-        android:id="@+id/typeWriterView3"
-        android:layout_width="match_parent"
-        android:layout_height="362dp"
-        android:layout_alignParentStart="true"
+    <TextView
+        android:id="@+id/typewriter_text2"
+        android:layout_width="354dp"
+        android:layout_height="351dp"
         android:layout_alignParentTop="true"
-
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="363dp"
-        android:baselineAligned="false"
-        android:shadowColor="#000000"
-        android:shadowDx="1.5"
-        android:shadowDy="1.3"
-        android:shadowRadius="1.6"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColorHint="#601D1D"
-        android:textSize="32sp"
-        app:fontFamily="@font/baloo_paaji" />
-
-    <Button
-        android:id="@+id/timebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="384dp"
-        android:layout_marginEnd="84dp"
-        android:text="select Time"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Please enter how long you sleep for"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="30dp" />
+        android:textSize="48sp" />
 
     <Button
         android:id="@+id/sumbitTime"
@@ -60,5 +30,16 @@
         android:layout_marginStart="124dp"
         android:layout_marginBottom="181dp"
         android:text="Button" />
+
+    <EditText
+        android:id="@+id/editHoursText"
+        android:layout_width="248dp"
+        android:layout_height="79dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="258dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter Hours you sleep" />
 
 </RelativeLayout>
