--- a/app/src/main/res/layout/fragment_display_app_usage.xml
+++ b/app/src/main/res/layout/fragment_display_app_usage.xml
@@ -28,7 +28,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="66dp"
-        android:text="Next" />
+        android:text="Submit"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/progressBar3"
